Merging from old trunk: r626731 | lunakl | 2007-01-24 14:49:28 +0100 (Wed, 24 Jan 2007) | 4 lines

Revert r427993 (#106013) as it causes #140023.
BUG: 140023


svn path=/trunk/KDE/kdebase/workspace/; revision=659526