tabbox.h
@@ -58,7 +58,6 @@ class TabBox : public QFrame
         Workspace* workspace() const;
 
         void reconfigure();
-        void updateKeyMapping();
 
     public slots:
         void show();
